preparing to upload abcstat version 0.01

--- a/common/info.tex
+++ b/common/info.tex
@@ -1,6 +1,6 @@
 %============================================================================
 % NCTU - Hsinchu, Taiwan
-% LaTeX File
+% LaTe\rvX File
 % Daniel Greenhoe
 %============================================================================
 
@@ -15,7 +15,7 @@
 \begin{fsK}
 \setlength{\unitlength}{0.17mm}                  
 \begin{picture}(900,150)(-100,-50)
-  \thinlines                                      
+  \thicklines                                      
   %\graphpaper[10](0,0)(700,100)                  
   \put(-100, 125 ){\vector(0,-1){40}}
   \put(-100, 130 ){\makebox(0,0)[bl]{$R_d$ (data rate)}}
@@ -40,7 +40,7 @@
   \put( 300, 130 ){\makebox(0,0)[bl]{$\frac{L}{N}=\frac{R_d}{R_c}\eqd R<C$ (channel capacity)}}
   \put( 300,  00 ){\framebox( 100,100){} }
   \put( 300,  30 ){\makebox( 100, 40)[t]{channel} }
-  \put( 300,  10 ){\makebox( 100, 40)[b]{$\pp(Y|X)$} }
+  \put( 300,  10 ){\makebox( 100, 40)[b]{$\pp(\rvY|\rvX)$} }
   \put( 210,  60 ){\makebox( 90, 50)[b]{$s(t)$} }
   \put( 400,  60 ){\makebox( 80, 50)[b]{$r(t)$} }
 
@@ -80,7 +80,7 @@ It is not a true distance measure\footnote{
   {\em Distance measure}: \prefpp{def:metric}
   }
 but it behaves in a similar manner.
-If $\pp_1=\pp_2$, then the KL distance is 0.
+If $\pp_1=\pp_2$, then the \fncte{KL distance} is 0.
 If $\pp_1$ is very different from $\pp_2$, then $|\iD{\pp_1}{\pp_2}|$ 
 will be much larger.
 
@@ -95,90 +95,99 @@ will be much larger.
 %--------------------------------------
 Let $\pp_1$ and $\pp_2$ be probability density functions.
 Then the {\bf Kullback Leibler distance}
-(the KL distance, also called the {\bf relative entropy})
+(the \fncte{KL distance}, also called the {\bf relative entropy})
 of $\pp_1$ and $\pp_2$ is
 \defbox{
-  \iD{\pp_1}{\pp_2} \eqd \pE \log_2 \frac{ \pp_1(X) }{\pp_2(X)} 
+  \iD{\pp_1}{\pp_2} \eqd \pE \log_2 \frac{ \pp_1(\rvX) }{\pp_2(\rvX)} 
   \hspace{3ex}\mbox{bits}
   }
 If the base of logarithm is $e$ (the ``natural logarithm") rather than $2$,
 then the units are {\em nats} rather than {\em bits}.
 \end{definition}
 
-The {\em mutual information} $\iI(X;Y)$ of random variable $X$ and $Y$ is
-the KL distance between their joint distribution $\pp(X,Y)$ and the 
-product of their marginal distributions $\pp(X)$ and $\pp(Y)$.
-If $X$ and $Y$ are independent, then the KL distance between 
+The \fncte{mutual information} $\iI(\rvX;\rvY)$ of random variable $\rvX$ and $\rvY$ is
+the \fncte{KL distance} between their \fncte{joint distribution} $\pp(\rvX,\rvY)$ and the 
+product of their \fncte{marginal distribution}s $\pp(\rvX)$ and $\pp(\rvY)$.
+If $\rvX$ and $\rvY$ are independent, then the \fncte{KL distance} between 
 joint and marginal product is $\log1=0$ and they have no 
-mutual information ($\iI(X;Y)=0$).
-If $X$ and $Y$ are highly correlated, then the joint distribution is
-much different than the product of the marginals making the KL distance
-greater and along with it the mutual information greater as well.
+\fncte{mutual information} ($\iI(\rvX;\rvY)=0$).
+If $\rvX$ and $\rvY$ are highly correlated, then the \fncte{joint distribution} is
+much different than the product of the marginals making the \fncte{KL distance}
+greater and along with it the \fncte{mutual information} greater as well.
 %--------------------------------------
-\begin{definition}[Mutual information]\citepp{cover}{18}{19}
+\begin{definition}[Mutual information]
+\footnote{
+  \citerpp{cover}{18}{19}
+  }
 \label{def:I(X;Y)}
 \index{information}
 \index{information!mutual information}
 %--------------------------------------
 \defbox{
-  \iI(X;Y) \eqd \iD{\pp(X,Y)}{\pp(X)\pp(Y)} 
-           \eqd \pExy \log_2 \frac{ \pp(X,Y) }{\pp(X)\pp(Y)} 
+  \iI(\rvX;\rvY) \eqd \iD{\pp(\rvX,\rvY)}{\pp(\rvX)\pp(\rvY)} 
+           \eqd \pExy \log_2 \frac{ \pp(\rvX,\rvY) }{\pp(\rvX)\pp(\rvY)} 
                 \hspace{3ex}\mbox{bits}
   }
 \end{definition}
 
-The {\em self information} $\iI(X;X)$ of random variable $X$ is the 
-mutual information between $X$ and itself.
-That is, it is a measure of the information contained in $X$.
-Self information $\iI(X;X)$ can also be viewed as the KL distance between
+The {\em self information} $\iI(\rvX;\rvX)$ of random variable $\rvX$ is the 
+\fncte{mutual information} between $\rvX$ and itself.
+That is, it is a measure of the information contained in $\rvX$.
+Self information $\iI(\rvX;\rvX)$ can also be viewed as the \fncte{KL distance} between
 the constant $1$ (no information because $1$ is completely known)
-and $\pp(X)$.
+and $\pp(\rvX)$.
 %--------------------------------------
-\begin{definition}[Self information]\citepp{cover}{18}{19}
+\begin{definition}[Self information]
+\footnote{
+  \citerpp{cover}{18}{19}
+  }
 \label{def:I(X;X)}
 \index{information!self information}
 %--------------------------------------
 \defbox{
-  \iI(X;X) \eqd \iD{1}{\pp(X)} 
-           \eqd \pEx \log_2 \frac{1}{\pp(X)} 
+  \iI(\rvX;\rvX) \eqd \iD{1}{\pp(\rvX)} 
+           \eqd \pEx \log_2 \frac{1}{\pp(\rvX)} 
                 \hspace{3ex}\mbox{bits}
   }
 \end{definition}
 
-The {\em entropy} $\iH(X)$ of a random variable $X$ is equivalent to
-the self information $\iI(X;X)$ of $X$.
-That is, the entropy of $X$ is a measure of the information contained
-in $X$.
+The \hie{entropy} $\iH(\rvX)$ of a random variable $\rvX$ is equivalent to
+the self information $\iI(\rvX;\rvX)$ of $\rvX$.
+That is, the entropy of $\rvX$ is a measure of the information contained
+in $\rvX$.
 
-Likewise, the {\em conditional entropy} $\iH(X|Y)$ 
-of $X$ given $Y$ is the information
-contained in $X$ given $Y$ has occurred. 
-If $X$ and $Y$ are independent, then $X$ does not care about the occurrence of
-$Y$. Thus in this case, 
-the occurrence of $Y=y$ does not change the amount of information
-provided by $X$ and $\iH(X|Y)=\iH(X)$.
-If $X$ and $Y$ are highly correlated, 
-the occurrence of $Y=y$ tells us a lot about what the value of $X$ might
+Likewise, the {\em conditional entropy} $\iH(\rvX|\rvY)$ 
+of $\rvX$ given $\rvY$ is the information
+contained in $\rvX$ given $\rvY$ has occurred. 
+If $\rvX$ and $\rvY$ are independent, then $\rvX$ does not care about the occurrence of
+$\rvY$. Thus in this case, 
+the occurrence of $\rvY=y$ does not change the amount of information
+provided by $\rvX$ and $\iH(\rvX|\rvY)=\iH(\rvX)$.
+If $\rvX$ and $\rvY$ are highly correlated, 
+the occurrence of $\rvY=y$ tells us a lot about what the value of $\rvX$ might
 turn out to be.
-Thus in this case, the information provided by $X$ given $Y$ is greatly reduced
-and $\iH(X|Y)<<\iH(X)$.
+Thus in this case, the information provided by $\rvX$ given $\rvY$ is greatly reduced
+and $\iH(\rvX|\rvY)<<\iH(\rvX)$.
 
-The {\em joint entropy} $\iH(X,Y)$ of $X$ and $Y$ is the amount of information 
-contained in the ordered pair $(X,Y)$.
+The {\em joint entropy} $\iH(\rvX,\rvY)$ of $\rvX$ and $\rvY$ is the amount of information 
+contained in the ordered pair $(\rvX,\rvY)$.
 
 %--------------------------------------
-\begin{definition}[Entropy]\citepp{cover}{15}{17}
+\begin{definition}[Entropy]
+\footnote{
+  \citerpp{cover}{15}{17}
+  }
 \label{def:H(X)}
-\label{def:H(X|Y)}
+\label{def:H(XY)}
 \index{entropy}
 \index{entropy!joint entropy}
 \index{entropy!conditional entropy}
 %--------------------------------------
 \defbox{
 \begin{array}{l@{\hspace{1cm}}rcl@{\hspace{1cm}}l}
-  \mbox{entropy of $X$}                       : & \iH(X)        &\eqd& \pEx  \log_2 \frac{1}{\pp(X)  }  & \mbox{bits} \\
-  \mbox{joint entropy of $X,Y$}               : & \iH(X,Y)      &\eqd& \pExy \log_2 \frac{1}{\pp(X,Y)}  & \mbox{bits} \\
-  \mbox{conditional entropy of $X$ given $Y$} : & \iH(X|Y)      &\eqd& \pExy \log_2 \frac{1}{\pp(X|Y)}  & \mbox{bits}   
+  \mbox{entropy of $\rvX$}                       : & \iH(\rvX)        &\eqd& \pEx  \log_2 \frac{1}{\pp(\rvX)  }  & \mbox{bits} \\
+  \mbox{joint entropy of $\rvX,\rvY$}               : & \iH(\rvX,\rvY)      &\eqd& \pExy \log_2 \frac{1}{\pp(\rvX,\rvY)}  & \mbox{bits} \\
+  \mbox{conditional entropy of $\rvX$ given $\rvY$} : & \iH(\rvX|\rvY)      &\eqd& \pExy \log_2 \frac{1}{\pp(\rvX|\rvY)}  & \mbox{bits}   
 \end{array}
 }
 \end{definition}
@@ -193,17 +202,17 @@ contained in the ordered pair $(X,Y)$.
 \begin{picture}(150,180)(0,0)
   {\color[rgb]{0,0,1}
   \put(  50,  50){\oval(100,100)}
-  \put(  50, 105){\makebox(0,0)[b]{$\iH(X)$}}
-  \put(  25,  50){\makebox(0,0){$\iH(X|Y)$}}
+  \put(  50, 105){\makebox(0,0)[b]{$\iH(\rvX)$}}
+  \put(  25,  50){\makebox(0,0){$\iH(\rvX|\rvY)$}}
   }
   {\color[rgb]{1,0,0}
   \put( 100,  50){\oval(100,100)}
-  \put( 100, 105){\makebox(0,0)[b]{$\iH(Y)$}}
-  \put( 125,  50){\makebox(0,0){$\iH(Y|X)$}}
+  \put( 100, 105){\makebox(0,0)[b]{$\iH(\rvY)$}}
+  \put( 125,  50){\makebox(0,0){$\iH(\rvY|\rvX)$}}
   }
   {\color[rgb]{0.5,0,0.5}
-  \put(  75, 120){\makebox(0,0)[b]{$\iH(X,Y)$}}
-  \put(  75,  50){\makebox(0,0)[b]{$\iI(X;Y)$}}
+  \put(  75, 120){\makebox(0,0)[b]{$\iH(\rvX,\rvY)$}}
+  \put(  75,  50){\makebox(0,0)[b]{$\iI(\rvX;\rvY)$}}
   }
 \end{picture}
 \end{footnotesize}\end{center}
@@ -216,14 +225,14 @@ contained in the ordered pair $(X,Y)$.
 %--------------------------------------
 \begin{theorem}
 %--------------------------------------
-\thmbox{ \iH(X,Y) = \iH(Y,X)  }
+\thmbox{ \iH(\rvX,\rvY) = \iH(\rvY,\rvX)  }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-  \iH(X,Y)
-    &\eqd& \pExy \log \frac{1}{\pp_{xy}(X,Y)}
-  \\&=&    \pEyx \log \frac{1}{\pp_{yx}(Y,X)}
-  \\&\eqd& \iH(Y,X)
+  \iH(\rvX,\rvY)
+    &\eqd& \pExy \log \frac{1}{\pp_{xy}(\rvX,\rvY)}
+  \\&=&    \pEyx \log \frac{1}{\pp_{yx}(\rvY,\rvX)}
+  \\&\eqd& \iH(\rvY,\rvX)
 \end{eqnarray*}
 \end{proof}
 
@@ -236,35 +245,35 @@ contained in the ordered pair $(X,Y)$.
 %--------------------------------------
 \thmbox{
   \begin{array}{rcl}
-    \iH(X,Y) &=& \ds \iH(X|Y) + \iH(Y)  \\
-             &=& \ds \iH(Y|X) + \iH(X). \\
-    \iH(X_1,X_2,\ldots,X_N) &=& \ds \sum_{n=1}^{N-1}\iH(X_n|X_{n+1},\ldots,X_N) + \iH(X_N)
+    \iH(\rvX,\rvY) &=& \ds \iH(\rvX|\rvY) + \iH(\rvY)  \\
+             &=& \ds \iH(\rvY|\rvX) + \iH(\rvX). \\
+    \iH(\rvX_1,\rvX_2,\ldots,\rvX_N) &=& \ds \sum_{n=1}^{N-1}\iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_N) + \iH(\rvX_N)
   \end{array}
 }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-  \iH(X,Y)
-    &\eqd& \pExy \log \frac{1}{\pp(X,Y)}
-  \\&=&    \pExy \log \frac{1}{\pp(X|Y)\pp(Y)}
-  \\&=&    \pExy \log \frac{1}{\pp(X|Y)} + \pExy \log \frac{1}{\pp(Y)}
-  \\&=&    \pExy \log \frac{1}{\pp(X|Y)} + \pEy \log \frac{1}{\pp(Y)}
-  \\&=&    \iH(X|Y) + \iH(Y)
+  \iH(\rvX,\rvY)
+    &\eqd& \pExy \log \frac{1}{\pp(\rvX,\rvY)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvX|\rvY)\pp(\rvY)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvX|\rvY)} + \pExy \log \frac{1}{\pp(\rvY)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvX|\rvY)} + \pEy \log \frac{1}{\pp(\rvY)}
+  \\&=&    \iH(\rvX|\rvY) + \iH(\rvY)
 \\
 \\
-  \iH(X,Y)
-    &\eqd& \pExy \log \frac{1}{\pp(X,Y)}
-  \\&=&    \pExy \log \frac{1}{\pp(Y|X)\pp(X)}
-  \\&=&    \pExy \log \frac{1}{\pp(Y|X)} + \pExy \log \frac{1}{\pp(X)}
-  \\&=&    \pExy \log \frac{1}{\pp(Y|X)} + \pEy \log \frac{1}{\pp(X)}
-  \\&=&    \iH(Y|X) + \iH(X)
+  \iH(\rvX,\rvY)
+    &\eqd& \pExy \log \frac{1}{\pp(\rvX,\rvY)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvY|\rvX)\pp(\rvX)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvY|\rvX)} + \pExy \log \frac{1}{\pp(\rvX)}
+  \\&=&    \pExy \log \frac{1}{\pp(\rvY|\rvX)} + \pEy \log \frac{1}{\pp(\rvX)}
+  \\&=&    \iH(\rvY|\rvX) + \iH(\rvX)
 \\
 \\
-  \iH(X_1,X_2,\ldots,X_N) 
-    &=& \iH(X_1|X_2,\ldots,X_N) + \iH(X_2,\ldots,X_N)
-  \\&=& \iH(X_1|X_2,\ldots,X_N) + \iH(X_2|X_3,\ldots,X_N) + \iH(X_3,\ldots,X_N)
-  \\&=& \iH(X_1|X_2,\ldots,X_N) + \iH(X_2|X_3,\ldots,X_N) + \iH(X_3|X_4,\ldots,X_N) + \iH(X_4,\ldots,X_N)
-  \\&=& \sum_{n=1}^{N-1}\iH(X_n|X_{n+1},\ldots,X_n) + \iH(X_N)
+  \iH(\rvX_1,\rvX_2,\ldots,\rvX_N) 
+    &=& \iH(\rvX_1|\rvX_2,\ldots,\rvX_N) + \iH(\rvX_2,\ldots,\rvX_N)
+  \\&=& \iH(\rvX_1|\rvX_2,\ldots,\rvX_N) + \iH(\rvX_2|\rvX_3,\ldots,\rvX_N) + \iH(\rvX_3,\ldots,\rvX_N)
+  \\&=& \iH(\rvX_1|\rvX_2,\ldots,\rvX_N) + \iH(\rvX_2|\rvX_3,\ldots,\rvX_N) + \iH(\rvX_3|\rvX_4,\ldots,\rvX_N) + \iH(\rvX_4,\ldots,\rvX_N)
+  \\&=& \sum_{n=1}^{N-1}\iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_n) + \iH(\rvX_N)
 \end{eqnarray*}
 \end{proof}
 
@@ -274,48 +283,48 @@ contained in the ordered pair $(X,Y)$.
 %--------------------------------------
 \thmbox{
   \begin{array}{rcl}
-    \iI(X;Y) &=& \iH(X) - \iH(X|Y)           \\
-    \iI(X;Y) &=& \iH(Y) - \iH(Y|X)           \\
-    \iI(X;Y) &=& \iH(X) + \iH(Y) - \iH(X,Y)  \\
-    \iI(X;Y) &=& \iI(Y;X)                    \\
-    \iI(X;X) &=& \iH(X)
+    \iI(\rvX;\rvY) &=& \iH(\rvX) - \iH(\rvX|\rvY)           \\
+    \iI(\rvX;\rvY) &=& \iH(\rvY) - \iH(\rvY|\rvX)           \\
+    \iI(\rvX;\rvY) &=& \iH(\rvX) + \iH(\rvY) - \iH(\rvX,\rvY)  \\
+    \iI(\rvX;\rvY) &=& \iI(\rvY;\rvX)                    \\
+    \iI(\rvX;\rvX) &=& \iH(\rvX)
   \end{array}
 }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-  \iI(X;Y)
-    &\eqd& \pExy \log_2 \frac{ \pp(X,Y) }{\pp(X)\pp(Y)}
-  \\&=&    \pExy \log_2 \frac{ \pp(X|Y) }{\pp(X)}
-  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(X)} + \pExy \log_2 \pp(X|Y) 
-  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(X)} - \pExy \log_2 \frac{1}{\pp(X|Y)}
-  \\&\eqd& \iH(X) - \iH(X|Y)
+  \iI(\rvX;\rvY)
+    &\eqd& \pExy \log_2 \frac{ \pp(\rvX,\rvY) }{\pp(\rvX)\pp(\rvY)}
+  \\&=&    \pExy \log_2 \frac{ \pp(\rvX|\rvY) }{\pp(\rvX)}
+  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(\rvX)} + \pExy \log_2 \pp(\rvX|\rvY) 
+  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(\rvX)} - \pExy \log_2 \frac{1}{\pp(\rvX|\rvY)}
+  \\&\eqd& \iH(\rvX) - \iH(\rvX|\rvY)
 \\
 \\
-  \iI(X;Y)
-    &\eqd& \pExy \log_2 \frac{ \pp(X,Y) }{\pp(X)\pp(Y)}
-  \\&=&    \pExy \log_2 \frac{ \pp(Y|X) }{\pp(Y)}
-  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(Y)} + \pExy \log_2 \pp(Y|X) 
-  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(Y)} - \pExy \log_2 \frac{1}{\pp(Y|X)}
-  \\&\eqd& \iH(Y) - \iH(Y|X)
+  \iI(\rvX;\rvY)
+    &\eqd& \pExy \log_2 \frac{ \pp(\rvX,\rvY) }{\pp(\rvX)\pp(\rvY)}
+  \\&=&    \pExy \log_2 \frac{ \pp(\rvY|\rvX) }{\pp(\rvY)}
+  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(\rvY)} + \pExy \log_2 \pp(\rvY|\rvX) 
+  \\&=&    \pExy \log_2 \frac{ 1 }{\pp(\rvY)} - \pExy \log_2 \frac{1}{\pp(\rvY|\rvX)}
+  \\&\eqd& \iH(\rvY) - \iH(\rvY|\rvX)
 \\
 \\
-  \iI(X;Y)
-    &=&    \iH(Y) - \iH(Y|X)
-  \\&=&    \iI(Y;X)
+  \iI(\rvX;\rvY)
+    &=&    \iH(\rvY) - \iH(\rvY|\rvX)
+  \\&=&    \iI(\rvY;\rvX)
 \\
 \\
-  \iI(X;X)
-    &\eqd& \pExy \log_2 \frac{ \pp(X,X) }{\pp(X)\pp(X)}
-  \\&=&    \pExy \log_2 \frac{ \pp(X)   }{\pp(X)\pp(X)}
-  \\&=&    \pExy \log_2 \frac{ 1        }{\pp(X)      }
-  \\&\eqd& \iH(X)
+  \iI(\rvX;\rvX)
+    &\eqd& \pExy \log_2 \frac{ \pp(\rvX,\rvX) }{\pp(\rvX)\pp(\rvX)}
+  \\&=&    \pExy \log_2 \frac{ \pp(\rvX)   }{\pp(\rvX)\pp(\rvX)}
+  \\&=&    \pExy \log_2 \frac{ 1        }{\pp(\rvX)      }
+  \\&\eqd& \iH(\rvX)
 \\
 \\
-  \iI(X;Y)
-    &\eqd& \iH(X) - \iH(X|Y)
-  \\&=&    \iH(X) - [ \iH(X,Y) - \iH(Y) ]
-  \\&=&    \iH(X) + \iH(Y) - \iH(X,Y) 
+  \iI(\rvX;\rvY)
+    &\eqd& \iH(\rvX) - \iH(\rvX|\rvY)
+  \\&=&    \iH(\rvX) - [ \iH(\rvX,\rvY) - \iH(\rvY) ]
+  \\&=&    \iH(\rvX) + \iH(\rvY) - \iH(\rvX,\rvY) 
 \end{eqnarray*}
 \end{proof}
 
@@ -326,23 +335,23 @@ contained in the ordered pair $(X,Y)$.
 \index{theorems!information chain rule}
 %--------------------------------------
 \thmbox{
-  \iI(X_1,X_2,\ldots,X_N;Y)
-    = \sum_{n=1}^{N-1}\iI(X_n|X_{n+1},\ldots,X_N) 
-        + \iI(X_N) 
+  \iI(\rvX_1,\rvX_2,\ldots,\rvX_N;\rvY)
+    = \sum_{n=1}^{N-1}\iI(\rvX_n|\rvX_{n+1},\ldots,\rvX_N) 
+        + \iI(\rvX_N) 
   }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-  \iI(X_1,X_2,\ldots,X_N;Y)
-    &=& \iH(X_1,X_2,\ldots,X_N) - \iH(X_1,X_2,\ldots,X_N|Y)
-  \\&=& \sum_{n=1}^{N-1}\iH(X_n|X_{n+1},\ldots,X_N) + \iH(X_N) 
-        - \sum_{n=1}^{N-1}\iH(X_n|X_{n+1},\ldots,X_N,Y) - \iH(X_N|Y) 
+  \iI(\rvX_1,\rvX_2,\ldots,\rvX_N;\rvY)
+    &=& \iH(\rvX_1,\rvX_2,\ldots,\rvX_N) - \iH(\rvX_1,\rvX_2,\ldots,\rvX_N|\rvY)
+  \\&=& \sum_{n=1}^{N-1}\iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_N) + \iH(\rvX_N) 
+        - \sum_{n=1}^{N-1}\iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_N,\rvY) - \iH(\rvX_N|\rvY) 
   \\&=& \sum_{n=1}^{N-1}\left[ 
-        \iH(X_n|X_{n+1},\ldots,X_N) - \iH(X_n|X_{n+1},\ldots,X_N,Y) 
+        \iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_N) - \iH(\rvX_n|\rvX_{n+1},\ldots,\rvX_N,\rvY) 
         \right]
-        + \left[ \iH(X_N) - \iH(X_N|Y) \right]
-  \\&=& \sum_{n=1}^{N-1}\iI(X_n|X_{n+1},\ldots,X_N) 
-        + \iI(X_N) 
+        + \left[ \iH(\rvX_N) - \iH(\rvX_N|\rvY) \right]
+  \\&=& \sum_{n=1}^{N-1}\iI(\rvX_n|\rvX_{n+1},\ldots,\rvX_N) 
+        + \iI(\rvX_N) 
 \end{eqnarray*}
 \end{proof}
 
@@ -358,16 +367,16 @@ contained in the ordered pair $(X,Y)$.
 \thmbox{
 \begin{array}{rcl}
   \iD{\pp_1}{\pp_2} &\ge& 0  \\
-  \iI(X;Y)          &\ge& 0
+  \iI(\rvX;\rvY)          &\ge& 0
 \end{array}
 }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
   \iD{\pp_1}{\pp_2}
-    &\eqd& \pEx\log\frac{\pp_1(X)}{\pp_2(X)}
-  \\&=&    \pEx\left[-\log\frac{\pp_2(X)}{\pp_1(X)} \right]
-  \\&\ge&  -\log\pEx\left[\frac{\pp_2(X)}{\pp_1(X)} \right]
+    &\eqd& \pEx\log\frac{\pp_1(\rvX)}{\pp_2(\rvX)}
+  \\&=&    \pEx\left[-\log\frac{\pp_2(\rvX)}{\pp_1(\rvX)} \right]
+  \\&\ge&  -\log\pEx\left[\frac{\pp_2(\rvX)}{\pp_1(\rvX)} \right]
     \hspace{1cm}\mbox{by \thme{Jensen's Inequality} \xref{thm:jensen}}
   \\&=&    -\log\int_x \pp_1(x)\frac{\pp_2(x)}{\pp_1(x)} \dx
   \\&=&    -\log\int_x \pp_2(x) \dx
@@ -386,7 +395,7 @@ Let $(L,N)$ be a block coder with $N$ output bits for each $L$ input bits.
 \[
 \begin{array}{rcll}
   R   &\eqd& \frac{L}{N}    & \mbox{coding rate}      \\
-  \iC &\eqd& \max \iI(X;Y)  & \mbox{channel capacity} \\
+  \iC &\eqd& \max \iI(\rvX;\rvY)  & \mbox{channel capacity} \\
   \iE(R) &\eqd& \max_\rho \max_Q [\iE_0(\rho,Q)-\rho R ]            & \mbox{random coding exponent}
 \end{array}
 \]
@@ -452,8 +461,8 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
   \put(  0,  0){\vector(1, 0){100}}
   \put(  0,100){\vector(1,-1){100}}
   \put(  0,  0){\vector(1, 1){100}}
-  \put(-30, 50){\makebox(0,0)[r]{$X$}}
-  \put(130, 50){\makebox(0,0)[l]{$Y$}}
+  \put(-30, 50){\makebox(0,0)[r]{$\rvX$}}
+  \put(130, 50){\makebox(0,0)[l]{$\rvY$}}
   \put(-05,100){\makebox(0,0)[r]{$0$}}
   \put(-05,  0){\makebox(0,0)[r]{$1$}}
   \put(105,100){\makebox(0,0)[l]{$0$}}
@@ -474,7 +483,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
   \qbezier[32](50,0)(50,50)(50,100)
   \qbezier(0,0)(50,200)(100,0)
   \qbezier[16](0,100)(25,100)(50,100)
-  \put( 80,80){\makebox(0,0)[l]{$\iH(X)$}}
+  \put( 80,80){\makebox(0,0)[l]{$\iH(\rvX)$}}
 \end{picture}
 &
 \begin{picture}(200,100)(-50,0)
@@ -487,7 +496,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
   \qbezier[32](50,0)(50,50)(50,100)
   \qbezier(0,0)(50,200)(100,0)
   \qbezier[16](0,100)(25,100)(50,100)
-  \put( 80,80){\makebox(0,0)[l]{$\iH(Y|X)$}}
+  \put( 80,80){\makebox(0,0)[l]{$\iH(\rvY|\rvX)$}}
 \end{picture}
 &
 \begin{picture}(200,100)(-50,0)
@@ -500,7 +509,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
   \qbezier(0,100)(50,-100)(100,100)
   \qbezier[32](0,100)(50,100)(100,100)
   \qbezier[32](100,0)(100,50)(100,100)
-  \put( 50,90){\makebox(0,0)[t]{$\iI(X;Y)$}}
+  \put( 50,90){\makebox(0,0)[t]{$\iI(\rvX;\rvY)$}}
 \end{picture}
 \end{tabular}
 \end{center}
@@ -525,27 +534,27 @@ are illustrated in \prefpp{fig:bsc} and stated in
 \index{Binary symmetric channel}
 \index{theorems!Binary symmetric channel}
 %--------------------------------------
-Let $\opC:X\to Y$ be a channel operation with $X,Y\in\{0,1\}$ and
+Let $\opC:\rvX\to \rvY$ be a channel operation with $\rvX,\rvY\in\{0,1\}$ and
 \begin{eqnarray*}
-  p &\eqd& \pP{X=1} \\
-  \pP{Y=1|X=0} &=& \pP{Y=0|X=1} \eqd \epsilon
+  p &\eqd& \pP{\rvX=1} \\
+  \pP{\rvY=1|\rvX=0} &=& \pP{\rvY=0|\rvX=1} \eqd \epsilon
 \end{eqnarray*}
 Then
 \thmbox{\begin{array}{rcl}
-  \pP{Y=1} &=& \epsilon+p-2\epsilon p
+  \pP{\rvY=1} &=& \epsilon+p-2\epsilon p
 \\
-  \pP{Y=0} &=& 1-p-\epsilon +2\epsilon p
+  \pP{\rvY=0} &=& 1-p-\epsilon +2\epsilon p
 \\
-  \iH(X)    &=&    p     \log_2 \frac{1}{p} +
+  \iH(\rvX)    &=&    p     \log_2 \frac{1}{p} +
            (1-p) \log_2 \frac{1}{(1-p)}
 \\
-  \iH(Y)    &=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
+  \iH(\rvY)    &=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
            (\epsilon +p-2\epsilon p)   \log_2 \frac{1}{\epsilon +p-2\epsilon p}
 \\
-  \iH(Y|X)  &=&    (1-\epsilon ) \log_2 \frac{1}{1-\epsilon } +
+  \iH(\rvY|\rvX)  &=&    (1-\epsilon ) \log_2 \frac{1}{1-\epsilon } +
            \epsilon      \log_2 \frac{1}{\epsilon   }
 \\
-  \iI(X;Y)  &=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
+  \iI(\rvX;\rvY)  &=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
            (\epsilon +p-2\epsilon p)   \log_2 \frac{1}{\epsilon +p-2\epsilon p} \\&&
            - (1-\epsilon ) \log_2 \frac{1}{1-\epsilon } +
            - \epsilon      \log_2 \frac{1}{\epsilon   }
@@ -555,48 +564,48 @@ Then
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-  \pP{X=1} &\eqd& p    \\
-  \pP{X=0} &=& 1-p     \\
-  \pP{Y=1}
-    &=& \pP{Y=1|X=0}\pP{X=0} + \pP{Y=1|X=1}\pP{X=1}
+  \pP{\rvX=1} &\eqd& p    \\
+  \pP{\rvX=0} &=& 1-p     \\
+  \pP{\rvY=1}
+    &=& \pP{\rvY=1|\rvX=0}\pP{\rvX=0} + \pP{\rvY=1|\rvX=1}\pP{\rvX=1}
   \\&=& \epsilon(1-p) + (1-\epsilon)p
   \\&=& \epsilon-\epsilon p + p-\epsilon p
   \\&=& \epsilon+p-2\epsilon p
 \\
-  \pP{Y=0} 
-    &=& \pP{Y=0|X=0}\pP{X=0} + \pP{Y=0|X=1}\pP{X=1}
+  \pP{\rvY=0} 
+    &=& \pP{\rvY=0|\rvX=0}\pP{\rvX=0} + \pP{\rvY=0|\rvX=1}\pP{\rvX=1}
   \\&=& (1-\epsilon )(1-p) + \epsilon p
   \\&=& 1-p-\epsilon +\epsilon p+\epsilon p
   \\&=& 1-p-\epsilon +2\epsilon p
 \\
 \\
-  \iH(X)
-    &\eqd& \pEx \log_2 \frac{1}{\pp(X)}
-  \\&=&    \sum_{n=0}^1 \pP{X=n} \log_2 \frac{1}{\pP{X=n}}
-  \\&=&    \pP{X=0} \log_2 \frac{1}{\pP{X=0}} +
-           \pP{X=1} \log_2 \frac{1}{\pP{X=1}}
+  \iH(\rvX)
+    &\eqd& \pEx \log_2 \frac{1}{\pp(\rvX)}
+  \\&=&    \sum_{n=0}^1 \pP{\rvX=n} \log_2 \frac{1}{\pP{\rvX=n}}
+  \\&=&    \pP{\rvX=0} \log_2 \frac{1}{\pP{\rvX=0}} +
+           \pP{\rvX=1} \log_2 \frac{1}{\pP{\rvX=1}}
   \\&=&    p     \log_2 \frac{1}{p} +
            (1-p) \log_2 \frac{1}{(1-p)}
 \\
 \\
-  \iH(Y)
-    &\eqd& \pEy \log_2 \frac{1}{\pp(Y)}
-  \\&=&    \sum_{n=0}^1 \pP{Y=n} \log_2 \frac{1}{\pP{Y=n}}
-  \\&=&    \pP{Y=0} \log_2 \frac{1}{\pP{Y=0}} + 
-           \pP{Y=1} \log_2 \frac{1}{\pP{Y=1}}
+  \iH(\rvY)
+    &\eqd& \pEy \log_2 \frac{1}{\pp(\rvY)}
+  \\&=&    \sum_{n=0}^1 \pP{\rvY=n} \log_2 \frac{1}{\pP{\rvY=n}}
+  \\&=&    \pP{\rvY=0} \log_2 \frac{1}{\pP{\rvY=0}} + 
+           \pP{\rvY=1} \log_2 \frac{1}{\pP{\rvY=1}}
   \\&=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
            (\epsilon +p-2\epsilon p)   \log_2 \frac{1}{\epsilon +p-2\epsilon p}
 \\
 \\
-  \iH(Y|X)
-    &\eqd& \pExy \log_2 \frac{1}{\pp(Y|X)}
-  \\&=&    \sum_{m=0}^1\sum_{n=0}^1 \pP{X=m,Y=n} \log_2 \frac{1}{\pP{Y=n|X=m}}
-  \\&=&    \sum_{m=0}^1\sum_{n=0}^1 \pP{Y=n|X=m}\pP{X=m} 
-           \log_2 \frac{1}{\pP{Y=n|X=m}}
-  \\&=&    \pP{Y=0|X=0}\pP{X=0} \log_2 \frac{1}{\pP{Y=0|X=0}} + \\&&
-           \pP{Y=0|X=1}\pP{X=1} \log_2 \frac{1}{\pP{Y=0|X=1}} + \\&&
-           \pP{Y=1|X=0}\pP{X=0} \log_2 \frac{1}{\pP{Y=1|X=0}} + \\&&
-           \pP{Y=1|X=1}\pP{X=1} \log_2 \frac{1}{\pP{Y=1|X=1}} 
+  \iH(\rvY|\rvX)
+    &\eqd& \pExy \log_2 \frac{1}{\pp(\rvY|\rvX)}
+  \\&=&    \sum_{m=0}^1\sum_{n=0}^1 \pP{\rvX=m,\rvY=n} \log_2 \frac{1}{\pP{\rvY=n|\rvX=m}}
+  \\&=&    \sum_{m=0}^1\sum_{n=0}^1 \pP{\rvY=n|\rvX=m}\pP{\rvX=m} 
+           \log_2 \frac{1}{\pP{\rvY=n|\rvX=m}}
+  \\&=&    \pP{\rvY=0|\rvX=0}\pP{\rvX=0} \log_2 \frac{1}{\pP{\rvY=0|\rvX=0}} + \\&&
+           \pP{\rvY=0|\rvX=1}\pP{\rvX=1} \log_2 \frac{1}{\pP{\rvY=0|\rvX=1}} + \\&&
+           \pP{\rvY=1|\rvX=0}\pP{\rvX=0} \log_2 \frac{1}{\pP{\rvY=1|\rvX=0}} + \\&&
+           \pP{\rvY=1|\rvX=1}\pP{\rvX=1} \log_2 \frac{1}{\pP{\rvY=1|\rvX=1}} 
   \\&=&    (1-\epsilon ) (1-p) \log_2 \frac{1}{1-\epsilon } +
            \epsilon      p     \log_2 \frac{1}{\epsilon   } +
            \epsilon      (1-p) \log_2 \frac{1}{\epsilon   } +
@@ -607,8 +616,8 @@ Then
            \epsilon      \log_2 \frac{1}{\epsilon   }
 \\
 \\
-  \iI(X;Y)
-    &=& \iH(Y) - \iH(Y|X)
+  \iI(\rvX;\rvY)
+    &=& \iH(\rvY) - \iH(\rvY|\rvX)
   \\&=&    (1-p-\epsilon +2\epsilon p) \log_2 \frac{1}{1-p-\epsilon +2\epsilon p} + 
            (\epsilon +p-2\epsilon p)   \log_2 \frac{1}{\epsilon +p-2\epsilon p}
            - (1-\epsilon ) \log_2 \frac{1}{1-\epsilon } +
@@ -616,8 +625,8 @@ Then
 \\
 \\
   \iC
-    &\eqd& \max_p \iI(X;Y)
-  \\&=&    \left. \iI(X;Y) \right|_{p=\frac{1}{2}}
+    &\eqd& \max_p \iI(\rvX;\rvY)
+  \\&=&    \left. \iI(\rvX;\rvY) \right|_{p=\frac{1}{2}}
   \\&=&    \frac{1}{2} \log_2 \frac{1}{\frac{1}{2}} + 
            \frac{1}{2} \log_2 \frac{1}{\frac{1}{2}}
            - (1-\epsilon ) \log_2 \frac{1}{1-\epsilon } +
@@ -626,18 +635,19 @@ Then
 \end{eqnarray*}
 \end{proof}
 
-Note:
-\begin{liste}
-  \item When $\epsilon =0$ (noiseless channel), the channel capacity is $1$ bit (maximum capacity).
-  \item When $\epsilon=1$ (inverting channel), the channel capacity is still $1$ bit.
-  \item When $\epsilon=1/2$ (totally random channel), the channel capacity is $0$.
-  \item When $p=1$ ($1$ is always transmitted), the entropy of $X$ is $0$.
-  \item When $p=0$ ($0$ is always transmitted), the entropy of $X$ is $0$.
-  \item When $p=1/2$ (totally random transmission), the entropy of $X$ is 1 bit
-        (maximum entropy).
-\end{liste}
-
-
+%---------------------------------------
+\begin{remark}
+%---------------------------------------
+\mbox{}\\\rembox{%
+  \begin{array}{MM}
+      When $\epsilon =0$  &(noiseless channel), the channel capacity is $1$ bit (maximum capacity).
+    \\When $\epsilon=1$   &(inverting channel), the channel capacity is still $1$ bit.
+    \\When $\epsilon=1/2$ &(totally random channel), the channel capacity is $0$.
+    \\When $p=1$ ($1$     &is always transmitted), the entropy of $\rvX$ is $0$.
+    \\When $p=0$ ($0$     &is always transmitted), the entropy of $\rvX$ is $0$.
+    \\When $p=1/2$        &(totally random transmission), the entropy of $\rvX$ is 1 bit (maximum entropy).
+  \end{array}}
+\end{remark}
 
 %=======================================
 \subsection{Gaussian Noise Channel}
@@ -648,7 +658,7 @@ Note:
 \begin{fsL}
 \setlength{\unitlength}{0.20mm}                  
 \begin{picture}(700,150)(-100,-50) 
-  \thinlines                                      
+  \thicklines                                      
   %\graphpaper[10](0,0)(500,100)                  
   \put(-100 ,  60 ){\makebox( 100,0)[b]{$\su$} }
   \put(-100 ,  50 ){\vector(1,0){100} }
@@ -658,7 +668,7 @@ Note:
   \put(  00 ,  10 ){\makebox( 100, 80)[b]{$\opT$} }
   \put(  00 ,  00 ){\framebox( 100,100){} }
 
-  \put( 100 ,  60 ){\makebox( 100,0)[b]{$X$} }
+  \put( 100 ,  60 ){\makebox( 100,0)[b]{$\rvX$} }
   \put( 100 ,  50 ){\vector(1,0){140} }
 
 
@@ -674,7 +684,7 @@ Note:
   %\put( 200 ,  10 ){\makebox( 100, 80)[b]{\opC} }
   %\put( 200 ,  00 ){\framebox(100,100){} }
 
-  \put( 300 ,  60 ){\makebox( 100,0)[b]{$Y$} }
+  \put( 300 ,  60 ){\makebox( 100,0)[b]{$\rvY$} }
   \put( 300 ,  50 ){\vector(1,0){100} }
 
   \put( 400 ,  00 ){\framebox(100,100){} }
@@ -740,10 +750,10 @@ Let $Z\sim\pN{0}{\sigma^2}$. Then
   \citerp{cover}{241}
   }
 %--------------------------------------
-Let $Y=X+Z$ be a Gaussian channel with $\pE X^2=P$ and
+Let $\rvY=\rvX+Z$ be a Gaussian channel with $\pE \rvX^2=P$ and
 $Z\sim\pN{0}{\sigma^2}$. Then
 \thmbox{ 
-  \iI(X;Y) \le \frac{1}{2}\log\left( 1 + \frac{P}{\sigma^2}\right) = \iC 
+  \iI(\rvX;\rvY) \le \frac{1}{2}\log\left( 1 + \frac{P}{\sigma^2}\right) = \iC 
   \hspace{1cm}\mbox{bits per usage}
   }
 \end{theorem}
@@ -754,7 +764,7 @@ $Z\sim\pN{0}{\sigma^2}$. Then
   \citerp{cover}{250}
   }
 %--------------------------------------
-Let $Y=X+Z$ be a bandlimited Gaussian channel with $\pE X^2=P$ and
+Let $\rvY=\rvX+Z$ be a bandlimited Gaussian channel with $\pE \rvX^2=P$ and
 $Z\sim\pN{0}{\sigma^2}$ and bandwidth $W$. Then
 \thmbox{ 
   \iC = W \log\left( 1 + \frac{P}{\sigma^2 W}\right) 
