--- a/common/probmt.tex
+++ b/common/probmt.tex
@@ -732,7 +732,7 @@ The order structure of this \structe{probability space} is illustrated to the ri
 }%
 \tbox{\includegraphics{graphics/lat4_m2_prob_die.pdf}}
 }
-\\
+\mbox{}\\
 \begin{proof}
 \begin{align*}
   \psp(\setO)
