--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1906,13 +1906,13 @@
 %--------------------------------------
 % Random processes
 %--------------------------------------
-\newcommand{\Rxx}    [1][xx] {{R_{\mathsfup{#1}}}}  % Autocorrelation function
-\newcommand{\Sxx}    [1][xx] {{S_{\mathsfup{#1}}}}  % spectral density
-\newcommand{\Swxx}   [1][xx] {{\tilde{S}_{\mathsfup{#1}}}}  % spectral density
-\newcommand{\LSxx}   [1][xx] {\mathrm{\hat{S}_{#1}}}  % Laplace spectral density
-\newcommand{\ZSxx}   [1][xx] {\mathrm{\hat{S}_{#1}}}  % Z-domain spectral density
-\newcommand{\avgRxx} [1][xx] {\mathrm{\bar{R}_{#1}}}  % Autocorrelation function
-\newcommand{\avgSxx} [1][xx] {\mathrm{\bar{S}_{#1}}}  % spectral density
+\newcommand{\Rxx}    [1][xx] {R_{\mathsfup{#1}}}  % Autocorrelation function
+\newcommand{\Sxx}    [1][xx] {S_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swxx}   [1][xx] {\tilde{S}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\LSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Laplace spectral density
+\newcommand{\ZSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Z-domain spectral density
+\newcommand{\avgRxx} [1][xx] {\bar{R}_{\mathsfup{#1}}}  % Autocorrelation function
+\newcommand{\avgSxx} [1][xx] {\bar{S}_{\mathsfup{#1}}}  % spectral density
 
 \newcommand{\Rhh}    {\Rxx[hh]}
 \newcommand{\Rll}    {\Rxx[\lambda\lambda]}
