--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -44,6 +44,7 @@
 % chapter flags
 %-----------------------------
 \newboolean{algebra}
+\newboolean{algosets}
 \newboolean{analyses}
 \newboolean{archive}
 \newboolean{backmat}
